Fix for bug 70611, support attributes in LDAP URLs. patch=leif@netscape.com, r=dmose, sr=mscott, a=blizzard.